- improve named parameters api - refactor printer options with named parameters